<resources>
    <string name="app_name">TODOList</string>
    <string name="app_version">1.2.6</string>
    <string name="icon">Icon</string>

    <string name="edit">Edit</string>
    <string name="add_event">Add TODO</string>
    <string name="show_notification">General Notification</string>
    <string name="info">Info</string>
    <string name="restore_last_removed_event">Restore Last Removed TODO</string>
    <string name="select_theme">App Theme</string>
    <string name="select_category">Categories</string>
    <string name="show_all_events">Show All Events</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="silence_all_alarms">Silence All Alarms</string>
    <string name="remove_all_alarms">Remove All Alarms</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="contact_me">Contact me</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_header1">Alarms</string>
    <string name="navigation_header2">Categories</string>
    <string name="navigation_header3">Appearance</string>
    <string name="navigation_header4">Notification</string>
    <string name="navigation_header5">About</string>

    <string name="choose_a_theme_color">Choose a Theme Color</string>
    <string name="choose_a_category">Selected Categories</string>
    <string name="cancel">Cancel</string>
    <string name="you_have">You have </string>
    <string name="event_in_your_todolist">TODO in your TODOList</string>
    <string name="events_in_your_todolist">TODOs in your TODOList</string>
    <string name="your_events_are">Your TODOs are:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="alarm_scheduled_for">Alarm scheduled for: </string>
    <string name="at"> at </string>
    <string name="alarm">Alarm</string>
    <string name="edit_time">Edit Time</string>
    <string name="remove">Remove</string>
    <string name="alarm_removed">Alarm removed</string>
    <string name="do_you_want_to_add_an_alarm">Do you want to add an Alarm?</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="ok">OK</string>
    <string name="schedule_for_this_alarm_for_tomorrow">Schedule for this Alarm for Tomorrow?</string>
    <string name="alarm_was_set_for">Alarm was set for </string>
    <string name="hinzugefuegt"> </string>
    <string name="edit_event">Edit TODO</string>
    <string name="choose_a_color">Choose a Color</string>
    <string name="this_category_contains_no_events">This Category contains no TODOs</string>
    <string name="do_you_really_want_to_remove_all_alarms">Do you really want to remove all Alarms?</string>
    <string name="all_alarms_removed">All Alarms removed</string>
    <string name="general_notification_is_hidden">General Notification is hidden</string>
    <string name="general_notification_is_shown">General Notification is shown</string>
    <string name="you_have_no_event_to_restore">You have no TODO to restore</string>
    <string name="all_alarm_are_now_silent">All Alarm are now silent</string>
    <string name="now_the_Phone_will_vibrate_when_alarms_are_fired">Now the Phone will vibrate when Alarms are fired</string>
    <string name="event_removed">TODO removed</string>
    <string name="undo">Undo</string>
    <string name="send_email">Send Email...</string>
    <string name="do_not_remove">!!Do not delete!!</string>
    <string name="dont_forget">Do not forget</string>
    <string name="search">Search</string>
    <string name="search_an_event">Search a TODO</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="developer_name">©2016 Lukas Koller, Munich, Germany</string>
    <string name="supported_languages">Supported Languages</string>
    <string name="english_german">English, German, Italian, Portuguese, Turkish</string>
    <string name="licences">Licences</string>
    <string name="do_homework">do Homework</string>
    <string name="clean_kitchen">clean the Kitchen</string>
    <string name="do_laundry">do the laundry</string>
    <string name="done">Done</string>
    <string name="these_categories_contains_no_events">These Categories contain no TODOs</string>
    <string name="not_all_events_shown">not all TODOs shown</string>
    <string name="color">Color</string>
    <string name="app_intro">App Intro</string>
    <string name="welcome">Welcome to TODOList</string>
    <string name="button_for_adding_events">Button for adding TODOs to your TODOList</string>
    <string name="this_is_a_todo">This is a TODO</string>
    <string name="tap_event">Tap the TODO to reveal its ActionButtons</string>
    <string name="action_area">Color the TODO, edit it or set an Alarm</string>
    <string name="swipe_event">Swipe the TODO to remove it</string>
    <string name="share_app">Share</string>
    <string name="no_category_selected">No Category selected</string>
    <string name="no_events">Nothing to do!</string>

    <string name="signOut">Sign out</string>
    <string name="signOutDialog_content">Do you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="syncData">Sync</string>
    <string name="navigation_header0">Sync</string>

    <string name="licences_text1">Android Support Libraries:</string>
    <string name="licences_text2">
        Copyright © 2011 The Android Open Source Project
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at
\n
\n      http://www.apache.org/licenses/LICENSE-2.0
\n
\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.</string>
    <string name="licences_text3">MaterialNumberPicker: </string>
    <string name="licences_text4">Copyright 2015 Kasual Business.
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at
\n
\n   http://www.apache.org/licenses/LICENSE-2.0
\n
\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.</string>
    <string name="licences_text5">Google Play Services Attribution:</string>

    <string name="restore_last_removed_event1"></string>
    <string name="silence_all_alarms2"></string>
    <string name="translators">Translators</string>
    <string name="translators_names0">Matteo Delton</string>
    <string name="translators_names1">Renata Suzart</string>
    <string name="translators_names2">Ömer Yigit Uzun</string>
    <string name="translators_names3">Robbe Delabre</string>
    <string name="translators_names4">Eric Pujol</string>
    <string name="app_id">com.koller.lukas.todolist</string>
    <string name="app_theme">App Theme</string>
    <string name="autoSync">AutoSync</string>

    <string name="legal_notices">Legal Notices</string>
    <string name="themeActivityInfoDialogTitle">Click any element to style its color!</string>
    <string name="themeActivityInfoDialogContent">(even the Toolbar and FloatingActionButton)</string>
    <string name="restore_from_default_themes">Restore from default themes</string>

    <string name="repeat">repeat: </string>

    <string name="daily">Every Day</string>
    <string name="weekly">Every Week</string>
    <string name="monthly">Every Month</string>
    <string name="certain_days">Certain Days</string>
    <string name="custom">Custom</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>

    <string name="toolbarAndBackgroundSameColor">Toolbar and Background same Color</string>

    <string name="share_todos">share TODOs</string>
    <string name="import_todos">Import TODOs</string>
    <string name="import_">Import</string>
    <string name="import_dialog_content">Select TODOs by tapping them.</string>

    <string name="preset_themes">Preset Themes</string>
    <string name="share_theme">share Theme</string>

    <string name="experimental_feature">Experimental Feature</string>
    <string name="signin_dialog_experimental_feature">
        The signIn allows you to sync your TODOs across devices!\n\n
        Please note that feature is still (very) experimental.
        \nThe developer does not take any responsibility for the loss of any TODOs.</string>
</resources>
