<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

    <TextView
            android:id="@+id/alarmInfoText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/alarmInfoText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:layout_gravity="center"
            android:paddingStart="24dp"
            android:textSize="16sp"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="24dp"
            android:paddingStart="18dp">

        <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/repeat"
                android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/checkbox"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="wrap_content"
                android:textSize="16sp"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">

        <LinearLayout
                android:id="@+id/numberPickers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="horizontal"/>
    </ScrollView>

    <ScrollView
            android:id="@+id/certain_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none">

        <HorizontalScrollView
                android:id="@+id/week_scroll_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:overScrollMode="never"
                android:scrollbars="none">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/monday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/monday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/tuesday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/tuesday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/wednesday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/wednesday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/thursday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/thursday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/friday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/friday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/saturday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/saturday"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/sunday_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/color_selector_button"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:text="@string/sunday"
                        android:textColor="@color/black"/>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>